# spacely

./: CMakeLists.txt  README.md  spacely.pc.in
.github/workflows/: tests.yaml
include/: constants.h  helpers.h  interval.h  vec3d.h
src/: interval.cpp  vec3d.cpp
tests/: CMakeLists.txt  helpers.cpp  interval.cpp  vec3d.cpp
